# aoc

./: .gitignore  README.md  pyproject.toml  sumbitch.py
scripts/: make_day.py  template-source.txt  template-test.txt
src/aoc/: utils.py
src/aoc/y2023/: d01.py  d02.py  d03.py  d04.py
src/aoc/y2024/: d01.py  d02.py  d03.py  d04.py  d05.py
test/: __init__.py
test/2023/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py
test/2024/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
